--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,3 @@
 ---
 - name: restart consul-template
-  action: service name=consul-template state=restarted
+  action: service name=consul-template state=reloaded
